--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,5 +8,5 @@ ports:
 
 # List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-  - init: echo 'init script' # runs during prebuild
+  - init: npm install tplink-cloud-api && npm install uuid && npm install mysql # runs during prebuild
     command: echo 'start script'
