--- a/Dockerfile.CalcConso
+++ b/Dockerfile.CalcConso
@@ -2,6 +2,7 @@ FROM node:buster
 ENV TZ Europe/Paris
 WORKDIR /usr/src/app
 COPY package*.json ./
+RUN npm install mysql
 RUN npm install
 COPY CalcConsoMySQL.js .
 CMD [ "node", "CalcConsoMySQL.js" ]
