--- a/Dockerfile.GetConso
+++ b/Dockerfile.GetConso
@@ -1,10 +1,11 @@
-FROM node:buster
+#FROM node:lts-bullseye-slim
+FROM alpine
+RUN apk add --update npm
 ENV TZ Europe/Paris
 WORKDIR /usr/src/app
-COPY package*.json ./
 RUN npm install tplink-cloud-api
 RUN npm install uuid
 RUN npm install mysql
-RUN npm install
+RUN npm audit fix --force
 COPY GetConsoMySQL.js .
 CMD [ "node", "GetConsoMySQL.js" ]
