--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "mysql": "^2.18.1",
+    "mongoose": "^6.9.0",
     "tplink-cloud-api": "^0.1.4",
     "uuid": "^9.0.0"
   }
