--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "graphite": "^0.1.5",
     "mongoose": "^6.9.0",
+    "mysql": "^2.18.1",
+    "node-statsd": "^0.1.1",
     "tplink-cloud-api": "^0.1.4",
     "uuid": "^9.0.0"
   }
