--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "express": "^4.18.2",
     "graphite": "^0.1.5",
+    "moment": "^2.29.4",
     "mongoose": "^6.9.0",
     "mysql": "^2.18.1",
     "node-statsd": "^0.1.1",
